# RSB

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
Handoffs/: ChatGpt_Handoff.txt  Claude_handoff.txt
config/: bet_rules_config.json  model_config.json  sports_config.json
docs/: ARCHITECTURE.md  CANDIDATE_EVALUATION_CONTRACT.md  LEGACY_PIPELINE_ARCHITECTURE_AUDIT.md
prompts/: claude_worldcup_prompt.md
src/: availability.py  backtest.py  backtest_report.py  backtest_review.py  candidate_ev.py  candidate_evaluation.py  candidate_ranking.py  candidate_report.py  check_odds_provider.py  config_validation.py  data_quality.py  database.py  edge.py  ev.py  features.py  historical_replay.py  import_claude_review.py  market_capability.py  market_selector.py  mlb_capability.py  model.py  odds.py  odds_collector.py  odds_snapshot.py  paths.py  prop_candidate.py  prop_result.py  review_notes.py  review_taxonomy.py  run_slate.py  simulator.py  slate_odds.py  stage_market.py  tactical_matchup.py  update_results.py  validation.py
tests/: conftest.py  test_availability.py  test_backtest.py  test_backtest_report.py  test_backtest_review.py  test_candidate_ev.py  test_candidate_evaluation.py  test_candidate_ranking.py  test_candidate_report.py  test_check_odds_provider.py  test_config_validation.py  test_data_quality.py  test_database_odds_snapshots.py  test_edge.py  test_ev.py  test_features.py  test_historical_replay.py  test_market_capability.py  test_market_selector.py  test_mlb_capability.py  test_model_safety.py  test_odds.py  (+16 more)
(+9 files in other folders)
