[project]
name = "rsb-worldcup-ai"
version = "0.1.9.2"
description = "World Cup-focused sports analytics research framework."
requires-python = ">=3.10,<3.15"
dependencies = [
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.5,<2.0",
  "joblib>=1.4,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
